# QuickSortFast

./: CMakeLists.txt  Dockerfile  README.md  build.sh  test.sh
include/: serialQuickSort.hpp  threadedQuickSort.h  threadedQuickSort_omp.h
serial/: CMakeLists.txt  Makefile
serial/src/: CMakeLists.txt  runScript_serial.cpp  serialQuickSort.cpp
serial/tests/: CMakeLists.txt  testFixture.cpp  testSerial.cpp
src/: runScript.cpp  runScript_serial.cpp  runScript_threaded.cpp  serialQuickSort.cpp  threadedQuickSort.cpp  threadedQuickSort_omp.cpp
tests/: testFixture.cpp  testSerial.cpp  testThreaded.cpp
threaded/: CMakeLists.txt
threaded/src/: CMakeLists.txt  runScript_threaded.cpp  threadedQuickSort_omp.cpp
threaded/tests/: CMakeLists.txt
